expanded section 2, added refs

--- a/biblio.bib
+++ b/biblio.bib
@@ -41,6 +41,20 @@ the exponential family of distributions},
   OPTannote = 	 {}
 }
 
+@PhdThesis{c.09,
+  author = 	 {Lawrence Cayton},
+  title = 	 {Bregman Proximity Search},
+  school = 	 {University of California, San Diego},
+  year = 	 {2009},
+  OPTkey = 	 {},
+  OPTtype = 	 {},
+  OPTaddress = 	 {},
+  OPTmonth = 	 {},
+  OPTnote = 	 {},
+  OPTannote = 	 {}
+}
+
+
 @Book{cz.97,
   author = 	 {Yair Censor and Stavros Zenios},
   ALTeditor = 	 {},
@@ -60,11 +74,11 @@ the exponential family of distributions},
 
 
 
-@Misc{d.2005,
+@Misc{d.05,
   OPTkey = 	 {},
   author = 	 {Sanjoy Dasgupta},
   title = 	 {Lectures on Unsupervised Learning},
-  OPThowpublished = {},
+  howpublished = {UC San Diego},
   OPTmonth = 	 {},
   year = 	 {2005},
   OPTnote = 	 {},
